--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "<p align=\"center\">\r   A Computer Science Engineering sophomore at Amrita Vishwa Vidyapeetham, Bengaluru, passionate about technology, robotics, and software development.\r </p>",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
