--- a/.github/workflows/eye-generator.yml
+++ b/.github/workflows/eye-generator.yml
@@ -2,15 +2,20 @@
 name: Generate Contribution SVG
 
 on:
-  # Run automatically on a schedule (every 12 hours)
   schedule:
     - cron: '0 */12 * * *'
-  # Allow manual runs from the Actions tab
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    # --- THIS IS THE FIX ---
+    # Give the default GITHUB_TOKEN write permission to commit and push the changes
+    permissions:
+      contents: write
+    # -----------------------
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -24,8 +29,7 @@ jobs:
         run: npm install
 
       - name: Generate SVG
-        # The filename must be exact. No extra .js
-        run: node scripts/generate-eye.js # <-- THIS IS THE CORRECTED LINE
+        run: node scripts/generate-eye.js
         env:
           GITTOKEN: ${{ secrets.GITTOKEN }}
 
